--- a/Green World/index.html
+++ b/Green World/index.html
@@ -83,7 +83,7 @@
                     <img src="https://scontent-vie1-1.xx.fbcdn.net/v/t1.6435-9/153605597_4331872446837540_7513114237959578756_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=mYAiX_cps9QAX-lc0cr&tn=ebJGdeiBrtXm5dlx&_nc_ht=scontent-vie1-1.xx&oh=ef7bf5bf762fa9dbdd03a7167856e2dc&oe=616655F0" 
                     alt="user image">
                         <div class="nieco">
-                            <p>Martin Blažek</p>
+                            <p>Martin Blazek</p>
                             <small>Public</small>
                             
                         </div>
@@ -164,7 +164,7 @@
     });
 
     $(function() {
-    //Skills and certificates
+    //Hungy function
     $('#WhoIsHungry').on('click', function(){
       $('.hungry-list').slideToggle(350);
 
