--- a/WEB_CV_II/Main copy.html
+++ b/WEB_CV_II/Main copy.html
@@ -4,21 +4,14 @@
     <meta charset="UTF-8">
     <meta name="CV" content="skills">
     <title >Martin Blazek CV</title>
-    <script src="./script2DATE.js" defer></script>
+    <script src="./script2.js" defer></script>
     <link rel="stylesheet" href="style.css?v=202111221827">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
   <header class="bg-light text-center">
-    <div class="mode" id="button">
-          <label class="switch">
-            <div class="time">
-            <input id="timesetter" type="text" value="17" placeholder="17">
-            :
-            <input type="text" value="00" disabled>
-          </div>
-          <button onclick="fntime()" id="settime" type="submit">Set darkmode time</button>
-        </div>
+    <div class="slider" id="dark-mode-toggle">
+      </div>
       
     </div>
       <div class="container container--narrow">
