--- a/WEB_CV_II/index.html
+++ b/WEB_CV_II/index.html
@@ -30,23 +30,16 @@
   <h2 class="text-center" id="first">My introduction</h2>
   <div class="split">
       <div class="splitleft">
-          <h4>Heading 1</h4>
-      <p>Specialize in manual testing, sprint condition controling, write and read
-        in MS SQL. Proven ability in XML, JSON, HTML, CSS, C#, C++.
-        Operating skills with Bitbucket. Technically oriented person with a high
-        sense of detail. Excellent communicative skills, sense for an effective
-        problem solving and resitence to work in stress.</p>
+          <h4>What I actually do</h4>
+      <p>I am <b>Software Quality Engineer</b> at tech focused company. I am participating on software development to biggest microscope supplier in the world. I work with <b>Python</b>,
+        but in my free time I am practicing <b>C# and Java too</b>. I have learned basics of <b>HTML, CSS and Javascript</b> couple months ago and I love it! 
+      </p>
     </div>
       <div class="splitright">
-        <h4>Heading 2</h4>
-          <p>bla bla bla bla bla blablabla blablabla   bla bla bla bla bla blablabla blablabla  
-            bla bla bla bla bla blablabla blablabla  
-            bla bla bla bla bla blablablablablabla   bla bla bla bla bla blablablablablabla  
-             bla bla bla bla bla blablablab 
-             lablabla   bla bla bla bla bla blablabla blablabla   bla bla bla bla bla blablabla blablabla  
-             bla bla bla bla bla blablabla blablabla  
-             bla bla bla bla bla blablablablablabla   bla bla bla bla bla blablablablablabla  
-              bla bla bla bla bla blablabla</p>
+        <h4>What am I looking forward to</h4>
+          <p>I would like to become Software Developer, I like backend and frontend as well. I am big fan of science and design so I am looking forward to learn some 
+            frontend frameworks as <b>Angular</b> or <b>Vue</b>. As I said I like science and tech features too, so I in future I will like to create some interestings
+          project in Python. <b>I like AI tracking</b>, It could be used for fun apps but also for saving lives and making our live much easier. </p>
       </div>
 </div>
 </div> 
@@ -159,6 +152,8 @@
   //SCRIPTS//
 $(function(){
   // This hide everything in sections
+      $('.splitright').slideToggle(0);
+      $('.splitleft').slideToggle(0);
       $('.tooltip1').slideToggle(0);
       $('.info_main1').slideToggle(0);
       $('.tooltip2').slideToggle(0);
