--- a/WEB_CV_II/index.html
+++ b/WEB_CV_II/index.html
@@ -115,7 +115,7 @@
                         <br>
                         <h4>SQA Engineer, Edhouse</h4>
                     <ul> Spetember 2021— Present</ul>
-                        <p>Quality assurance Software Tester Engineer Automation/Manual testing </p>       
+                        <p>Software Quality Engineer Automation/Manual testing </p>       
               </div>
             </div>
         </div>
