--- a/WEB_CV_II/index.html
+++ b/WEB_CV_II/index.html
@@ -126,7 +126,7 @@
   <div class="container">
     <div class="split">
         <div class="info">
-            <h2 class="MEinfo" id="fourth" >My hobies.. in progress</h2>
+            <h2 class="MEinfo" id="fourth" >My projects</h2>
                 <div class="info_main3">
                 <h4>Basic description number 1</h4>
                 <ul> how long i do this</ul>
