--- a/WEB_CV_II/index.html
+++ b/WEB_CV_II/index.html
@@ -40,7 +40,7 @@
       <div class="splitright">
         <h4>What am I looking forward to</h4>
           <p>I would like to become <b>Software Developer</b>, I like backend and frontend as well. I am big fan of science and design so I am looking forward to learn some 
-            frontend frameworks as <b>Angular</b> or <b>Vue</b>. As I said I like science and tech features too, so I in future I will like to create some interestings
+            frontend frameworks as <b>Angular</b> or <b>Vue</b>. As I said I like science and tech features too, so in future I will like to create some interestings
           project in Python. <b>I like AI tracking</b>, It could be used for fun apps but also for saving lives and making our live much easier. </p>
       </div>
 </div>
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="split">
             <div class="info">
-                <h2 class="MEinfo" id="second" >Skills and certificates</h2>
+                <h2 class="MEinfo" id="second" >Achievments and skills</h2>
                     <div class="info_main1">
                     <h4>CERTIFICATES</h4>
                     <ul> <b>ECDL - European Computer Driving Licence</b> </ul>
@@ -63,13 +63,11 @@
                         Software testing basics</p>
                         <br>
 
-                    <h4>SKILLS</h4>
+                    <h4>ACIEVMENTS</h4>
                         <ul>
-                            <p>Stress</p>
-                            <p>Friendly</p>
-                            <p>Something</p>
-                            <p>Else</p>
-
+                            <p>Civil defence training co-organizer</p>
+                            <p>Airsoft+CTF organizer</p>
+                            <p>ex member of band BLINDONG ROOM (guitar)</p>
                         </ul>
                     </div>
             </div>
