--- a/WEB_CV_II/index.html
+++ b/WEB_CV_II/index.html
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="split">
             <div class="info">
-                <h2 class="MEinfo" id="second" >Achievments and skills</h2>
+                <h2 class="MEinfo" id="second" >Skills</h2>
                     <div class="info_main1">
                     <h4>CERTIFICATES</h4>
                     <ul> <b>ECDL - European Computer Driving Licence</b> </ul>
@@ -62,13 +62,6 @@
                     <p>
                         Software testing basics</p>
                         <br>
-
-                    <h4>ACIEVMENTS</h4>
-                        <ul>
-                            <p>Civil defence training co-organizer</p>
-                            <p>Airsoft+CTF organizer</p>
-                            <p>ex member of band BLINDONG ROOM (guitar)</p>
-                        </ul>
                     </div>
             </div>
             <div class="tooltip1">
