--- a/WEB_CV_II/index.html
+++ b/WEB_CV_II/index.html
@@ -51,17 +51,32 @@
       <div class="container">
         <div class="split">
             <div class="info">
-                <h2 class="MEinfo" id="second" >Skills</h2>
+                <h2 class="MEinfo" id="second" >Technologies</h2>
                     <div class="info_main1">
-                    <h4>CERTIFICATES</h4>
-                    <ul> <b>ECDL - European Computer Driving Licence</b> </ul>
+                    <h4>Working with</h4>
+                    <ul> <b>Git</b> </ul>
                     <p>
-                        Basics of MS office 365</p>
+                        Gitlab, Github, Bitbucket etc.</p>
                         <br>
-                        <ul> <b>ISTQB - Foundation level</b> </ul>
+                        <ul> <b>Front-end</b> </ul>
                     <p>
-                        Software testing basics</p>
+                        Basics of HTML,CSS and Javasript</p>
                         <br>
+                        <ul> <b>Back-end</b> </ul>
+                    <p>
+                        Basics of C#, Java, Python</p>
+                        <br>
+                        <ul> <b>Databases</b> </ul>
+                    <p>
+                        MS SQL, PostgreSQL</p>
+                        <br>
+                        <h4>Learning</h4>
+                    <ul> <b>Front-end</b> </ul>
+                    <p>
+                        React and Vue</p>
+                        <br>
+                        
+                        
                     </div>
             </div>
             <div class="tooltip1">
